# rosenthal-vis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
backend/: main.py  materials.py  models.py  requirements.txt  rosenthal.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: compute.ts
frontend/src/components/: Header.tsx  Layout.tsx
frontend/src/components/ControlPanel/: ControlPanel.tsx  MaterialSelector.tsx  ParameterSlider.tsx  presets.ts
frontend/src/components/SketchVis/: AnimationState.ts  SceneRenderer.ts  SketchCanvas.tsx  isometric.ts  types.ts
frontend/src/components/SketchVis/renderers/: Annotations.ts  DefectBadges.ts  LaserBeam.ts  MeltPool.ts  PowderBed.ts  Sparks.ts
frontend/src/components/SketchVis/sketch/: constants.ts  crosshatch.ts  noise.ts  sketchEllipse.ts  wobblyLine.ts
frontend/src/components/ui/: Tooltip.tsx
frontend/src/hooks/: useParameters.ts  useRosenthalCompute.ts
frontend/src/types/: index.ts
