[project]
name = "rosenthal-vis"
version = "1.0.0"
description = "Interactive Rosenthal equation visualisation for LPBF melt pools"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
